Theme toggle: use inline SVG icons (sun/moon) and style; ensure visible in header

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -42,6 +42,13 @@ header {
   font-size: var(--space-lg);
 }
 
+#themeToggleIcon svg {
+  display: block;
+  width: 1.25rem;
+  height: 1.25rem;
+  color: inherit;
+}
+
 h1 {
   line-height: var(--headingLineHeight);
   font-size: var(--fontSize-h1);
